change package struct & add business logic
