# docs/swagger.json
@@ -175,26 +175,7 @@
                 "message": {
                     "type": "string"
                 },
-                "resultObj": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.ResultObject"
-                    }
-                },
-                "statusCode": {
-                    "type": "integer"
-                }
-            }
-        },
-        "model.ResultObject": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "string"
-                    }
-                }
+                "resultObj": {}
             }
         }
     }
